fixed storeis and footer

--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
                     </div>
                     <span>user_id</span>
                 </div>
+                <div class="story">
+                    <div class="profile-container">
+                        <img src="./images/profiles/profile1.jpeg" alt="profile">
+                    </div>
+                    <span>user_id</span>
+                </div>
             </div>
         </section>
     </header>
