fixed read more on buttom of posts

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                             elit. Placeat, quas unde exercitationem voluptates consectetur nesciunt deleniti dicta ut
                             officia facere libero numquam quaerat possimus perspiciatis ex quae! Rem harum ipsum aut
                             velit soluta eaque reiciendis</p>
-                        <span>more...</span>
+                        <span class="read-more">more...</span>
                         <div class="date">
                             3 Days ago
                         </div>
@@ -134,7 +134,7 @@
                             elit. Placeat, quas unde exercitationem voluptates consectetur nesciunt deleniti dicta ut
                             officia facere libero numquam quaerat possimus perspiciatis ex quae! Rem harum ipsum aut
                             velit soluta eaque reiciendis</p>
-                        <span>more...</span>
+                        <span class="read-more">more...</span>
                         <div class="date">
                             3 Days ago
                         </div>
@@ -174,7 +174,7 @@
                             elit. Placeat, quas unde exercitationem voluptates consectetur nesciunt deleniti dicta ut
                             officia facere libero numquam quaerat possimus perspiciatis ex quae! Rem harum ipsum aut
                             velit soluta eaque reiciendis</p>
-                        <span>more...</span>
+                        <span class="read-more">more...</span>
                         <div class="date">
                             3 Days ago
                         </div>
