explorer post and add link to footer

--- a/explorer.html
+++ b/explorer.html
@@ -5,33 +5,94 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Explorer</title>
-    <link rel="stylesheet" href="./fontawesome-free-6.5.2-web/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/owl.carousel.min.css">
     <link rel="stylesheet" href="./css/owl.theme.default.min.css">
     <link rel="stylesheet" href="./css/main.css">
-    <link rel="stylesheet" href="./css/explorel.css">
+    <link rel="stylesheet" href="./css/explorer.css">
 </head>
 
 <body>
     <header>
         <div class="search-container">
             <i class="fa-solid fa-magnifying-glass"></i>
-            <input type="text">
+            <input type="text" placeholder="Search">
         </div>
     </header>
     <main>
         <section class="posts-container">
-           
+            <div class="item">
+                <img src="./images/posts/1.jpg" alt="">
+            </div>
+            <div class="item">
+                <img src="./images/posts/2.jpg" alt="">
+            </div>
+            <div class="item big">
+                <img src="./images/posts/big1.jpg" alt="">
+            </div>
+            <div class="item">
+                <img src="./images/posts/3.jpg" alt="">
+            </div>
+            <div class="item">
+                <img src="./images/posts/4.jpg" alt="">
+            </div>
+            <div class="item big">
+                <img src="./images/posts/big2.jpg" alt="">
+            </div>
+            <div class="item">
+                <img src="./images/posts/5.jpg" alt="">
+            </div>
+            <div class="item">
+                <img src="./images/posts/6.jpg" alt="">
+            </div>
+            <div class="item">
+                <img src="./images/posts/7.jpg" alt="">
+            </div>
+            <div class="item">
+                <img src="./images/posts/8.jpg" alt="">
+            </div>
+            <div class="item">
+                <img src="./images/posts/9.jpg" alt="">
+            </div>
+            <div class="item">
+                <img src="./images/posts/10.jpg" alt="">
+            </div>
+            <div class="item big">
+                <img src="./images/posts/big3.jpg" alt="">
+            </div>
+            <div class="item">
+                <img src="./images/posts/11.jpg" alt="">
+            </div>
+            <div class="item">
+                <img src="./images/posts/12.jpg" alt="">
+            </div>
+            <div class="item big">
+                <img src="./images/posts/big4.jpg" alt="">
+            </div>
+            <div class="item">
+                <img src="./images/posts/13.jpg" alt="">
+            </div>
+            <div class="item">
+                <img src="./images/posts/15.jpg" alt="">
+            </div>
+            <div class="item">
+                <img src="./images/posts/16.jpg" alt="">
+            </div>
+            <div class="item">
+                <img src="./images/posts/14.jpg" alt="">
+            </div>
         </section>
     </main>
     <footer>
-        <i class="fa-solid fa-house"></i>
-        <i class="fa-solid fa-magnifying-glass"></i>
-        <i class="fa-regular fa-square-plus"></i>
-        <i class="fa-solid fa-clapperboard"></i>
-        <div class="profile-container">
+        <a href="index.html"> <i class="fa-solid fa-house"></i></a>
+        <a href="explorer.html"><i class="fa-solid fa-magnifying-glass"></i></a>
+        <a href="#"><i class="fa-regular fa-square-plus"></i></a>
+        <a href="#"><i class="fa-solid fa-clapperboard"></i></a>
+        <a href="profile-page"><div class="profile-container">
             <img src="./images/profiles/profile1.jpeg" alt="profile">
-        </div>
+        </div></a>
     </footer>
     <script src="./js/jquery-3.7.1.min.js"></script>
     <script src="./js/owl.carousel.min.js"></script>
