--- a/index.html
+++ b/index.html
@@ -187,13 +187,15 @@
         </section>
     </main>
     <footer>
-        <i class="fa-solid fa-house"></i>
-        <i class="fa-solid fa-magnifying-glass"></i>
-        <i class="fa-regular fa-square-plus"></i>
-        <i class="fa-solid fa-clapperboard"></i>
-        <div class="profile-container">
-            <img src="./images/profiles/profile1.jpeg" alt="profile">
-        </div>
+        <a href="index.html"> <i class="fa-solid fa-house"></i></a>
+        <a href="explorer.html"><i class="fa-solid fa-magnifying-glass"></i></a>
+        <a href="#"><i class="fa-regular fa-square-plus"></i></a>
+        <a href="#"><i class="fa-solid fa-clapperboard"></i></a>
+        <a href="profile-page">
+            <div class="profile-container">
+                <img src="./images/profiles/profile1.jpeg" alt="profile">
+            </div>
+        </a>
     </footer>
     <script src="./js/jquery-3.7.1.min.js"></script>
     <script src="./js/owl.carousel.min.js"></script>
