--- a/explorer.html
+++ b/explorer.html
@@ -5,9 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Explorer</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./FontAwesome.Pro.6.5.2/css/all.css">
     <link rel="stylesheet" href="./css/owl.carousel.min.css">
     <link rel="stylesheet" href="./css/owl.theme.default.min.css">
     <link rel="stylesheet" href="./css/main.css">
@@ -86,11 +84,11 @@
         </section>
     </main>
     <footer>
-        <a href="index.html"> <i class="fa-solid fa-house"></i></a>
-        <a href="explorer.html"><i class="fa-solid fa-magnifying-glass"></i></a>
-        <a href="#"><i class="fa-regular fa-square-plus"></i></a>
-        <a href="#"><i class="fa-solid fa-clapperboard"></i></a>
-        <a href="profile-page"><div class="profile-container">
+        <a href="index.html"> <i class="fa-light fa-house"></i></a>
+        <a href="explorer.html"><i class="fa-light fa-magnifying-glass"></i></a>
+        <a href="#"><i class="fa-light fa-square-plus"></i></a>
+        <a href="#"><i class="fa-light fa-clapperboard"></i></a>
+        <a href="profile.html"><div class="profile-container">
             <img src="./images/profiles/profile1.jpeg" alt="profile">
         </div></a>
     </footer>
