--- a/explorer.html
+++ b/explorer.html
@@ -85,15 +85,18 @@
     </main>
     <footer>
         <a href="index.html"> <i class="fa-light fa-house"></i></a>
-        <a href="explorer.html"><i class="fa-light fa-magnifying-glass"></i></a>
+        <a href="explorer.html"><i class="fa-solid fa-magnifying-glass"></i></a>
         <a href="#"><i class="fa-light fa-square-plus"></i></a>
-        <a href="#"><i class="fa-light fa-clapperboard"></i></a>
-        <a href="profile.html"><div class="profile-container">
-            <img src="./images/profiles/profile1.jpeg" alt="profile">
-        </div></a>
+        <a href="#"><i class="fa-light fa-clapperboard-play"></i></a>
+        <a href="profile.html">
+            <div class="profile-container">
+                <img src="./images/profiles/profile1.jpeg" alt="profile">
+            </div>
+        </a>
     </footer>
     <script src="./js/jquery-3.7.1.min.js"></script>
     <script src="./js/owl.carousel.min.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 
 </html>
