--- a/explorer.html
+++ b/explorer.html
@@ -84,10 +84,10 @@
         </section>
     </main>
     <footer>
-        <a href="index.html"> <i class="fa-light fa-house"></i></a>
+        <a href="index.html"> <i class="fa-regular fa-house"></i></a>
         <a href="explorer.html"><i class="fa-solid fa-magnifying-glass"></i></a>
-        <a href="#"><i class="fa-light fa-square-plus"></i></a>
-        <a href="#"><i class="fa-light fa-clapperboard-play"></i></a>
+        <a href="#"><i class="fa-regular fa-square-plus"></i></a>
+        <a href="#"><i class="fa-regular fa-clapperboard-play"></i></a>
         <a href="profile.html">
             <div class="profile-container">
                 <img src="./images/profiles/profile1.jpeg" alt="profile">
