--- a/profile.html
+++ b/profile.html
@@ -26,7 +26,7 @@
                     <div class="profile-container">
                         <img src="./images/profiles/profile1.jpeg" alt="profile">
                     </div>
-                    <span>your story</span>
+                    <span>My Name</span>
                     <p class="bio">this is my bio</p>
                     <i class="fa-regular fa-plus"></i>
                 </div>
