--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
             </div>
             <div class="like-direct">
                 <i class="fa-regular fa-heart"></i>
-                <i class="fa-brands fa-facebook-messenger"></i>
+                <i style="transform: rotate(-35deg);" class="fa-regular fa-paper-plane-top"></i>
             </div>
         </section>
         <section class="stories">
             <div id="owl-product" class="owl-carousel owl-theme">
-                <div class="story">
+                <div class="story your-profile">
                     <div class="profile-container">
                         <img src="./images/profiles/profile1.jpeg" alt="profile">
                     </div>
