fixed dark mode and create side menu

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="./css/owl.theme.default.min.css">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/home.css">
-    <script src="./js/main.js"></script>
 </head>
 
 <body>
@@ -197,6 +196,8 @@
     </footer>
     <script src="./js/jquery-3.7.1.min.js"></script>
     <script src="./js/owl.carousel.min.js"></script>
+    <script src="./js/main.js"></script>
+    <script src="./js/profile.js"></script>
     <script src="./js/home.js"></script>
 
 </body>
