--- a/profile.html
+++ b/profile.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="./css/owl.theme.default.min.css">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/profile.css">
-    <script src="./js/main.js"></script>
 </head>
 
 <body>
@@ -108,6 +107,93 @@
             </div>
         </section>
     </main>
+    <aside>
+        <section class="head">
+            <i class="fa-regular fa-arrow-left-long"></i>
+            <span> Settings and activity</span>
+            <div class="dark-light">
+                <i style="display: none;" class="fa-light fa-sun-bright"></i>
+                <i class="fa-light fa-moon"></i>
+            </div>
+        </section>
+        <div class="search-container">
+            <i class="fa-solid fa-magnifying-glass"></i>
+            <input type="text" placeholder="Search">
+        </div>
+        <section class="sec account">
+            <span>Your account</span>
+            <div class="item">
+                <i class="fa-regular fa-circle-user"></i>
+                <div>
+                    <span>Account Center</span>
+                    <span>Password, security,personal details, ad preferences</span>
+                </div>
+                <i class="fa-regular fa-chevron-right"></i>
+            </div>
+        </section>
+        <section class="sec">
+            <span>How you use Instagram</span>
+            <div class="item">
+                <i class="fa-light fa-bookmark"></i>
+                <span>Saved</span>
+                <i class="fa-regular fa-chevron-right"></i>
+            </div>
+            <div class="item">
+                <i class="fa-light fa-bell"></i>
+                <span>Notifications</span>
+                <i class="fa-regular fa-chevron-right"></i>
+            </div>
+            <div class="item">
+                <i class="fa-light fa-clock"></i>
+                <span>Time spent</span>
+                <i class="fa-regular fa-chevron-right"></i>
+            </div>
+        </section>
+        <section class="sec">
+            <span>Who can see your content</span>
+            <div class="item">
+                <i class="fa-regular fa-lock"></i>
+                <span>Account privacy</span>
+                <i class="fa-regular fa-chevron-right"></i>
+            </div>
+            <div class="item">
+                <i class="fa-regular fa-circle-star"></i>
+                <span>Close Friends</span>
+                <i class="fa-regular fa-chevron-right"></i>
+
+            </div>
+            <div class="item">
+                <i class="fa-regular fa-ban"></i>
+                <span>Blocked</span>
+               <i class="fa-regular fa-chevron-right"></i>
+
+            </div>
+        </section>
+        <section class="sec">
+            <span>What you see</span>
+            <div class="item">
+                <i class="fa-regular fa-star"></i>
+                <span>Favorites</span>
+                <i class="fa-regular fa-chevron-right"></i>
+            </div>
+            <div class="item">
+                <i class="fa-regular fa-bell-slash"></i>
+                <span>Muted account</span>
+                <i class="fa-regular fa-chevron-right"></i>
+            </div>
+            <div class="item">
+                <i class="fa-regular fa-photo-film"></i>
+                <span>Suggested content</span>
+                <i class="fa-regular fa-chevron-right"></i>
+            </div>
+        </section>
+        <section class="sec">
+            <span>Login</span>
+            <span>Add account</span>
+            <span>Log out</span>
+        </section>
+
+    </aside>
     <footer>
         <a href="index.html"> <i class="fa-regular fa-house"></i></a>
         <a href="explorer.html"><i class="fa-regular fa-magnifying-glass"></i></a>
@@ -121,6 +207,8 @@
     </footer>
     <script src="./js/jquery-3.7.1.min.js"></script>
     <script src="./js/owl.carousel.min.js"></script>
+    <script src="./js/main.js"></script>
+    <script src="./js/profile.js"></script>
 
 </body>
 
