--- a/index.html
+++ b/index.html
@@ -27,38 +27,36 @@
             </div>
         </section>
         <section class="stories">
-            <div id="owl-product" class="owl-carousel owl-theme">
-                <div class="story your-profile">
-                    <div class="profile-container">
-                        <img src="./images/profiles/profile1.jpeg" alt="profile">
-                    </div>
-                    <span>your story</span>
-                    <i class="fa-regular fa-plus"></i>
+            <div class="story your-profile">
+                <div class="profile-container">
+                    <img src="./images/profiles/profile1.jpeg" alt="profile">
                 </div>
-                <div class="story has">
-                    <div class="profile-container">
-                        <img src="./images/profiles/profile2.jpg" alt="profile">
-                    </div>
-                    <span>user_id</span>
+                <span>your story</span>
+                <i class="fa-regular fa-plus"></i>
+            </div>
+            <div class="story has">
+                <div class="profile-container">
+                    <img src="./images/profiles/profile2.jpg" alt="profile">
                 </div>
-                <div class="story">
-                    <div class="profile-container">
-                        <img src="./images/profiles/profile3.jpg" alt="profile">
-                    </div>
-                    <span>user_id</span>
+                <span>user_id</span>
+            </div>
+            <div class="story has">
+                <div class="profile-container">
+                    <img src="./images/profiles/profile3.jpg" alt="profile">
                 </div>
-                <div class="story">
-                    <div class="profile-container">
-                        <img src="./images/profiles/profile4.jpg" alt="profile">
-                    </div>
-                    <span>user_id</span>
+                <span>user_id</span>
+            </div>
+            <div class="story">
+                <div class="profile-container">
+                    <img src="./images/profiles/profile4.jpg" alt="profile">
                 </div>
-                <div class="story">
-                    <div class="profile-container">
-                        <img src="./images/profiles/profile5.jpg" alt="profile">
-                    </div>
-                    <span>user_id</span>
+                <span>user_id</span>
+            </div>
+            <div class="story">
+                <div class="profile-container">
+                    <img src="./images/profiles/profile5.jpg" alt="profile">
                 </div>
+                <span>user_id</span>
             </div>
         </section>
     </header>
@@ -197,8 +195,7 @@
             </div>
         </a>
     </footer>
-    <script src="./js/owl.carousel.min.js"></script>
-    <script src="./js/profile.js"></script>
+    <script src="./js/jquery.mousewheel.min.js"></script>
     <script src="./js/home.js"></script>
 </body>
 
